# RustCat

./: Cargo.toml  README.md
files/: .john_doe.json
src/: client.rs  consts.rs  main.rs  server.rs  utils.rs
src/utils/: crypto_utils.rs  file_manager.rs  folder.rs  user.rs  user_manager.rs  utils.rs
