[package]
name = "code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
sha3 = "0.10.8"
hex = "0.4.3"
rsa = "0.9.6"
rand = "0.8.5"
argon2 = "0.5.2"
hkdf = "0.12.4"
chacha20poly1305 = "0.10.1"
serde_json = "1.0.108"
cliclack = "0.1.10"
clearscreen = "2.0.1"
quit = "2.0.0"
sha2 = "0.11.0-pre.3"
